# mdsanima-dev

./: .buildinfo  .commitlintrc  .editorconfig  .gitignore  .pylintrc  .versionrc  CHANGELOG.md  CNAME  LICENSE  Makefile  README.md  index.html  make_release.py  manifest.json  objects.inv  package.json  pyproject.toml  requirements-dev.txt  requirements-doc.txt  requirements.txt  searchindex.js  setup.py
.github/: labels.yaml
.github/workflows/: commitlint.yaml  docs-deploy.yml  docs.yaml  sphinx.yml
_sources/: getting-started.md.txt  sponsor.md.txt
_sources/commands/: index.md.txt
_sources/development/: index.md.txt
_sources/modules/: table.md.txt  tools.md.txt
_sources/project/: about.md.txt  badge.md.txt  index.md.txt  social.md.txt
_sources/tutorials/: how-to-install-python-on-ubuntu-linux-system.md.txt  how-to-remove-trash-icon-from-ubuntu-desktop.md.txt  how-to-rename-local-and-remote-git-branch.md.txt  index.md.txt
_static/: documentation_options.js
commands/: index.html
commands/converts/: index.html
development/: index.html
development/changelog/: index.html
development/license/: index.html
development/workflow/: index.html
docs/: conf.py  getting-started.md  index.html  index.md  installation.md  module-colors.md  module-emoji.md  requirements-dev.txt  shell-converts.md  workflow.md
docs/_static/: mdsanima.css  mdsanima.js
docs/_static/css/: furo-mdsanima.css
docs/command/: converts.md  index.md
docs/commands/: converts.md
docs/development/: index.md  license.md  workflow.md
docs/doctrees/: changelog.doctree  development.doctree  environment.pickle  index.doctree  module_colors.doctree  module_emoji.doctree  module_table.doctree  module_tools.doctree
docs/html/: .buildinfo  changelog.html  development.html  genindex.html  index.html  module_colors.html  module_emoji.html  module_table.html  module_tools.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/_sources/: development.md.txt
docs/module/: converts.md  index.md  table.md
docs/modules/: colors.md  converts.md  emoji.md  index.md  table.md  tools.md
docs/project/: reference.md  theme.md
docs/screenshots/: colors.md  index.md
docs/shell/: converts.md
docs/source/: conf.py  development.md  index.md  index.rst  module_colors.md  module_converts.md  module_emoji.md  module_table.md  module_tools.md  packaging.md  shell_converts.md
docs/source/_static/css/: furo.css
docs/source/_static/js/: furo-mdsanima.js
docs/source/console/: shell-converts.md
docs/source/devs/: workflow.md
docs/source/modules/: colors.md  converts.md  emoji.md  table.md  tools.md
docs/tutorials/: how-to-rename-local-and-remote-git-branch.md  index.md
genindex/: index.html
getting-started/: index.html
modules/: index.html
modules/colors/: index.html
modules/converts/: index.html
modules/emoji/: index.html
modules/table/: index.html
modules/tools/: index.html
project/: index.html
project/about/: index.html
project/badge/: index.html
project/reference/: index.html
project/social/: index.html
project/theme/: index.html
py-modindex/: index.html
search/: index.html
sponsor/: index.html
src/: .gitkeep
src/mdsanima_dev/: __init__.py  colors.py  emoji.py
src/mdsanima_dev/json/: emoji-list.json  emoji-modifiers.json
src/mdsanima_dev/utils/: convert.py  converts.py  table.py  tools.py
tests/: __init__.py  colors_get_normal_test.py  colors_print_normal_test.py  colors_set_normal_test.py  colors_show_normal_test.py  colors_use_normal_test.py  data_package.py  test_data_package.py
tutorials/: index.html
tutorials/how-to-install-python-on-ubuntu-linux-system/: index.html
tutorials/how-to-remove-trash-icon-from-ubuntu-desktop/: index.html
tutorials/how-to-rename-local-and-remote-git-branch/: index.html
