# Copyritht © 2022 - 2023 Marcin Różewski MDSANIMA

[build-system]
requires = ['setuptools>=46.4.0', 'wheel']
build-backend = 'setuptools.build_meta'

[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'

[tool.isort]
profile = 'black'
src_paths = ['src', 'tests']
force_single_line = true
lines_before_imports = 2
lines_after_imports = 2
treat_all_comments_as_code = true
extend_skip = ['.md', '.json']
