# Copyright (c) 2021 - 2023 MDSANIMA

# This is a configuration file for this Python package. Published on PyPI using Twine.


[build-system]
requires = ["setuptools>=68.2", "wheel>=0.41", "setuptools_scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"


[project]
name = "mdsanima-dev"
dynamic = ["version"]
description = "The mdsanima-dev Python package offers a range of powerful features, including colorizing text, adding emojis, and creating well-formatted tables in console shell print output."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Marcin Różewski", email = "marcinrozewski@gmail.com" }]
keywords = [
    "animation",
    "automatic",
    "bash",
    "changelog",
    "cli",
    "colors",
    "command-line",
    "console-app",
    "console-application",
    "console",
    "development",
    "emoj",
    "mdsanima-dev",
    "mdsanima",
    "python-library",
    "python",
    "python3",
    "shell-script",
    "shell",
    "terminal",
    "tools",
    "versioning",
    "vfx",
    "zsh",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Other Audience",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: Polish",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: BSD",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Education :: Testing",
    "Topic :: Home Automation",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System",
    "Topic :: System :: Console Fonts",
    "Topic :: System :: Filesystems",
    "Topic :: System :: Logging",
    "Topic :: System :: Operating System",
    "Topic :: System :: Shells",
    "Topic :: System :: System Shells",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Systems Administration :: Authentication/Directory",
    "Topic :: Terminals",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Markup :: reStructuredText",
    "Topic :: Utilities",
    "Typing :: Typed",
]


[project.optional-dependencies]
dev = [
    "black==23.12.1",
    "build==1.0.3",
    "flake8==6.1.0",
    "ipython==8.19.0",
    "isort==5.13.2",
    "pylint==3.0.3",
    "pytest-cov==4.1.0",
    "pytest==7.4.3",
    "setuptools-scm==8.0.4",
    "setuptools==69.0.2",
    "twine==4.0.2",
    "virtualenv==20.25.0",
    "wheel==0.42.0",
]
doc = [
    "furo==2023.9.10",
    "myst-parser==2.0.0",
    "sphinx-copybutton==0.5.2",
    "sphinx-design==0.5.0",
    "sphinx-inline-tabs==2023.4.21",
    "sphinx==7.2.6",
    "sphinxext-opengraph==0.9.1",
]


[project.urls]
Homepage = "https://github.com/mdsanima-dev/mdsanima-dev/"
Documentation = "https://mdsanima-dev.github.io/mdsanima-dev/"
Repository = "https://github.com/mdsanima-dev/mdsanima-dev.git"
Changelog = "https://github.com/mdsanima-dev/mdsanima-dev/blob/main/CHANGELOG.md"
Tracker = "https://github.com/mdsanima-dev/mdsanima-dev/issues/"


[project.scripts]
mdsanima-dev = "mdsanima_dev.utils.converts:main"


[tool.black]
line-length = 120


[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
force_single_line = true
lines_before_imports = 2
lines_after_imports = 2
treat_all_comments_as_code = true
extend_skip = [".md", ".json"]


[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools_scm]
write_to = "src/mdsanima_dev/_version.py"
